sandbox/output
StringCal.java:5: error: cannot find symbol
        if (str.startWith("//")){
               ^
  symbol:   method startWith(String)
  location: variable str of type String
1 error
